# Django_production

./: .env  Dockerfile  pyproject.toml  requirements.txt
mysite/database/: db.sqlite3
mysite/mysite/: settings.py
