[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Maksim"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-restframework = "^0.0.1"
django-filter = "^23.3"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
